# cc13x0-pac-demo

./: CC13x0.svd  README.md
cc13x0-pac/: CC13x0.svd  Cargo.toml  device.x
cc13x0-pac-example/: Cargo.toml  debug.gdb  memory.x
cc13x0-pac-example/.cargo/: config
cc13x0-pac-example/src/: main.rs
cc13x0-pac/src/: aon_batmon.rs  aon_event.rs  aon_ioc.rs  aon_rtc.rs  aon_sysctl.rs  aon_wuc.rs  aux_adi4.rs  aux_aiodio1.rs  aux_anaif.rs  aux_ddi0_osc.rs  aux_evctl.rs  aux_sce.rs  aux_smph.rs  aux_tdcif.rs  aux_timer.rs  aux_wuc.rs  ccfg.rs  cpu_tiprop.rs  crypto.rs  event.rs  fcfg1.rs  flash.rs  gpio.rs  gpt2.rs  i2c0.rs  i2s0.rs  ioc.rs  lib.rs  prcm.rs  rfc_dbell.rs  rfc_pwr.rs  rfc_rat.rs  smph.rs  ssi1.rs  trng.rs  uart0.rs  udma0.rs  vims.rs  wdt.rs
cc13x0-pac/src/aon_batmon/: bat.rs  batmonp0.rs  batmonp1.rs  batupd.rs  ctl.rs  flashpumpp0.rs  iostrp0.rs  meascfg.rs  temp.rs  tempp0.rs  tempp1.rs  tempp2.rs  tempupd.rs
cc13x0-pac/src/aon_event/: auxwusel.rs  evtomcusel.rs  mcuwusel.rs  rtcsel.rs
cc13x0-pac/src/aon_ioc/: clk32kctl.rs  ioclatch.rs  iostrmax.rs  iostrmed.rs  iostrmin.rs
cc13x0-pac/src/aon_rtc/: ch0cmp.rs  ch1capt.rs  ch1cmp.rs  ch2cmp.rs  ch2cmpinc.rs  chctl.rs  ctl.rs  evflags.rs  sec.rs  subsec.rs  subsecinc.rs  sync.rs
cc13x0-pac/src/aon_sysctl/: pwrctl.rs  resetctl.rs  sleepctl.rs
cc13x0-pac/src/aon_wuc/: auxcfg.rs  auxclk.rs  auxctl.rs  ctl0.rs  ctl1.rs  jtagcfg.rs  jtagusercode.rs  mcucfg.rs  mcuclk.rs  osccfg.rs  pwrstat.rs  rechargecfg.rs  rechargestat.rs  shutdown.rs
cc13x0-pac/src/aux_adi4/: adc0.rs  adc1.rs  adcref0.rs  (+8 more)
(+794 files in other folders)
