[package]
name = "cc13x0-pac-example"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.6.12"

[dependencies.cc13x0-pac]
version = "0.1.0"
path = "../cc13x0-pac"
features = ["rt"]
