[package]
name = "cc13x0-pac"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
vcell = "0.1.2"
cortex-m = "0.6.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.12"

[features]
rt = ["cortex-m-rt/device"]
